samples/_failures_safe/1761727186_a9a5ce_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e495d9b0.c: In function ‘main’:
./samples/SAFE/__tmp_e495d9b0.c:164:9: error: expected declaration or statement at end of input
  164 |         printf("\n");
      |         ^~~~~~
./samples/SAFE/__tmp_e495d9b0.c:164:9: error: expected declaration or statement at end of input
